--- a/outvoice/Info.plist
+++ b/outvoice/Info.plist
@@ -2,7 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>UIUserInterfaceStyle</key>
-    <string>Light</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
+			<key>CFBundleURLName</key>
+			<string>supabase auth</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.outvoiceios</string>
+			</array>
+		</dict>
+		<dict/>
+	</array>
 </dict>
 </plist>
